--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: Zimeng Lyu
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
 
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://cathybgyz.github.io/zimenglyu" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/zimenglyu" # the subpath of your site, e.g. /blog
+url: "https://cathybgyz.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: cathybgyz
 
 # Build settings
