Revert "Set theme jekyll-theme-merlot"
This reverts commit 7848926da8fb6406ebe579cce68fa2a4ec23b4d1.

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ linkedin_username: zimenglyu
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-merlot
+theme: minima
 plugins:
   - jekyll-feed
 
