--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://zimenglyu.com" # the base hostname & protocol for your site, e.g. http://example.com
-github_username: cathybgyz
+github_username: zimenglyu
 linkedin_username: zimenglyu
 
 # Build settings
